<resources>
    <string name="app_name">CIS298Assignment4</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="beverage_id">Id:</string>
    <string name="beverage_name">Name</string>
    <string name="beverage_pack">Pack:</string>
    <string name="beverage_price">Price:</string>
    <string name="beverage_active">Active:</string>

    <string name="beverage_id_hint">Item Id</string>
    <string name="beverage_name_hint">Item Name</string>
    <string name="beverage_pack_hint">Item Pack</string>
    <string name="beverage_price_hint">Item Price</string>
    <string name="beverage_select_contact_button">Select Contact</string>
    <string name="beverage_send_beverage_details_button">Send Beverage Details</string>

    <string name="email_body_prompt">Please review the following beverage:</string>

    <string name="contact_not_selected">Either contact not selected or contact does not have associated email!</string>

</resources>
